# advanced-portfolio-hedging

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.py
notebooks/: 00_exploratory_data_analysis.ipynb  01_factor_model_construction.ipynb  02_nlp_embedding_generation.ipynb  03_hedging_strategy_comparison.ipynb  04_ai_revolution_clustering.ipynb
scripts/: run_clustering_analysis.py  run_hedge_backtest.py
src/adv_hedging/: config.py  constants.py  utils.py
src/adv_hedging/hedging/: core.py  metrics.py  optimization.py
src/adv_hedging/nlp/: text_processing.py
src/adv_hedging/risk_model/: factor_engine.py
tests/: conftest.py  test_data_cleaning.py  test_factor_engine.py  test_optimization.py  test_text_processing.py
